--- a/haproxy/haproxy.cfg
+++ b/haproxy/haproxy.cfg
@@ -47,10 +47,10 @@ frontend ssl-in
 
         tcp-request inspect-delay 5s
 
-        acl turn0 payload(0,1),hex -m sub 0
-        acl turn1 payload(0,1),hex -m sub 1
-        acl turn2 payload(0,1),hex -m sub 2
-        acl turn3 payload(0,1),hex -m sub 3
+        acl turn0 payload(0,1),hex -m beg 0
+        acl turn1 payload(0,1),hex -m beg 1
+        acl turn2 payload(0,1),hex -m beg 2
+        acl turn3 payload(0,1),hex -m beg 3
         
         tcp-request content accept if HTTP
         tcp-request content accept if turn0 || turn1 || turn2 || turn3
